user public also been corrected and documented on swagger
