# docs/swagger.json
@@ -338,6 +338,55 @@
                     }
                 }
             }
+        },
+        "/api/v1/users/{id}": {
+            "get": {
+                "description": "Get user by id (uuid)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get user by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Languages: en, ru, tk",
+                        "name": "Accept-Language",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.DetailResponse-responses_UserPublicResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -393,6 +442,39 @@
                 }
             }
         },
+        "responses.UserPublicResponse": {
+            "type": "object",
+            "required": [
+                "is_active",
+                "is_staff"
+            ],
+            "properties": {
+                "dob": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "is_staff": {
+                    "type": "boolean"
+                },
+                "last_name": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "patronomic": {
+                    "type": "string",
+                    "maxLength": 50
+                }
+            }
+        },
         "types.DetailResponse-responses_CategoryPublicResponse": {
             "type": "object",
             "properties": {
@@ -412,6 +494,20 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/responses.LanguagePublicResponse"
+                },
+                "translations": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.TranslationResponse"
+                    }
+                }
+            }
+        },
+        "types.DetailResponse-responses_UserPublicResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/responses.UserPublicResponse"
                 },
                 "translations": {
                     "type": "array",
