# internal/handlers/users_public_handlers.go
@@ -7,12 +7,25 @@ import (
 	"github.com/kcharymyrat/e-commerce/internal/app"
 	"github.com/kcharymyrat/e-commerce/internal/common"
 	"github.com/kcharymyrat/e-commerce/internal/constants"
+	"github.com/kcharymyrat/e-commerce/internal/data"
 	"github.com/kcharymyrat/e-commerce/internal/mappers"
 	"github.com/kcharymyrat/e-commerce/internal/services"
 	"github.com/kcharymyrat/e-commerce/internal/types"
 	"github.com/nicksnyder/go-i18n/v2/i18n"
 )
 
+// @Summary Get user by id
+// @Description Get user by id (uuid)
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param Accept-Language header string false "Languages: en, ru, tk"
+// @Param id path uuid true "UUID"
+// @Router /api/v1/users/{id} [get]
+// @Success 200 {object} types.DetailResponse[responses.UserPublicResponse] "translations is empty for users"
+// @Failure 400 {object} types.ErrorResponse
+// @Failure 404 {object} types.ErrorResponse
+// @Failure 500 {object} types.ErrorResponse
 func GetUserPublicHandler(app *app.Application) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		// valTrans := r.Context().Value(constants.ValTransKey).(ut.Translator)
@@ -36,7 +49,9 @@ func GetUserPublicHandler(app *app.Application) http.HandlerFunc {
 		}
 
 		res := mappers.UserToUserPublicResponse(user)
-		err = common.WriteJson(w, http.StatusOK, types.Envelope{"user": res}, nil)
+
+		detailResponse := types.NewDetailResponse(res, []*data.Translation{})
+		err = common.WriteDetailJson(w, http.StatusOK, detailResponse, nil)
 		if err != nil {
 			common.ServerErrorResponse(app.Logger, localizer, w, r, err)
 		}
